removed JDK integration for certificate generation, only BouncyCastle is supported due to limitations and bugs in Java module system preventing use of JDK