@@ -1,11 +1,8 @@
 package org.mockserver.socket.tls;
 
 import org.mockserver.configuration.Configuration;
-import org.mockserver.java.JDKVersion;
-import org.mockserver.log.model.LogEntry;
 import org.mockserver.logging.MockServerLogger;
-import org.mockserver.socket.tls.jdk.JDKKeyAndCertificateFactory;
-import org.slf4j.event.Level;
+import org.mockserver.socket.tls.bouncycastle.BCKeyAndCertificateFactory;
 
 import java.lang.reflect.Constructor;
 import java.util.function.Function;
@@ -19,70 +16,11 @@ public class KeyAndCertificateFactoryFactory {
 
     private static final ClassLoader CLASS_LOADER = KeyAndCertificateFactoryFactory.class.getClassLoader();
 
-    @SuppressWarnings("unchecked")
     public static KeyAndCertificateFactory createKeyAndCertificateFactory(Configuration configuration, MockServerLogger mockServerLogger) {
         if (customKeyAndCertificateFactorySupplier != null) {
             return customKeyAndCertificateFactorySupplier.apply(mockServerLogger);
         } else {
-            if (configuration.useBouncyCastleForKeyAndCertificateGeneration() || canNotLoadSunSecurityPackages()) {
-                if (canNotLoadBouncyCastleClasses()) {
-                    if (configuration.useBouncyCastleForKeyAndCertificateGeneration()) {
-                        mockServerLogger.logEvent(
-                            new LogEntry()
-                                .setLogLevel(Level.ERROR)
-                                .setMessageFormat("failed to instantiate the BouncyCastle KeyAndCertificateFactory because BouncyCastle library is not available in classpath please ensure the following dependencies are available")
-                                .setArguments("<dependency>\n" +
-                                    "    <groupId>org.bouncycastle</groupId>\n" +
-                                    "    <artifactId>bcprov-jdk15on</artifactId>\n" +
-                                    "    <version>1.70</version>\n" +
-                                    "</dependency>\n" +
-                                    "<dependency>\n" +
-                                    "    <groupId>org.bouncycastle</groupId>\n" +
-                                    "    <artifactId>bcpkix-jdk15on</artifactId>\n" +
-                                    "    <version>1.70</version>\n" +
-                                    "</dependency>")
-                        );
-                    } else {
-                        mockServerLogger.logEvent(
-                            new LogEntry()
-                                .setLogLevel(Level.WARN)
-                                .setMessageFormat("can not load classes in 'sun.security.x509' or 'sun.security.util' so falling back to BouncyCastle KeyAndCertificateFactory but failed to instantiate BouncyCastle; for " + (JDKVersion.getVersion() >= 16 ? "this Java version " + JDKVersion.getVersion() + " (which is >= 16)" : "Java versions >= 16") + " access to packages 'sun.security.x509' and 'sun.security.util' is denied by default at runtime EITHER (1) allow this by adding JVM arguments '--add-exports=java.base/sun.security.x509=ALL-UNNAMED' and '--add-exports=java.base/sun.security.util=ALL-UNNAMED' OR (2) ensure the following dependencies for BouncyCastle are available")
-                                .setArguments("<dependency>\n" +
-                                    "    <groupId>org.bouncycastle</groupId>\n" +
-                                    "    <artifactId>bcprov-jdk15on</artifactId>\n" +
-                                    "    <version>1.70</version>\n" +
-                                    "</dependency>\n" +
-                                    "<dependency>\n" +
-                                    "    <groupId>org.bouncycastle</groupId>\n" +
-                                    "    <artifactId>bcpkix-jdk15on</artifactId>\n" +
-                                    "    <version>1.70</version>\n" +
-                                    "</dependency>")
-                        );
-                    }
-                }
-                try {
-                    Class<KeyAndCertificateFactory> keyAndCertificateFactorClass = (Class<KeyAndCertificateFactory>) CLASS_LOADER.loadClass("org.mockserver.socket.tls.bouncycastle.BCKeyAndCertificateFactory");
-                    Constructor<KeyAndCertificateFactory> keyAndCertificateFactorConstructor = keyAndCertificateFactorClass.getDeclaredConstructor(Configuration.class, MockServerLogger.class);
-                    if (MockServerLogger.isEnabled(Level.TRACE)) {
-                        mockServerLogger.logEvent(
-                            new LogEntry()
-                                .setLogLevel(Level.TRACE)
-                                .setMessageFormat("using Bouncy Castle for X.509 Certificate and Private Key generation")
-                        );
-                    }
-                    return keyAndCertificateFactorConstructor.newInstance(configuration, mockServerLogger);
-                } catch (Throwable throwable) {
-                    mockServerLogger.logEvent(
-                        new LogEntry()
-                            .setLogLevel(Level.ERROR)
-                            .setMessageFormat("failed to instantiate the BouncyCastle KeyAndCertificateFactory")
-                            .setThrowable(throwable)
-                    );
-                    throw new RuntimeException("failed to instantiate the BouncyCastle KeyAndCertificateFactory");
-                }
-            } else {
-                return new JDKKeyAndCertificateFactory(configuration, mockServerLogger);
-            }
+            return new BCKeyAndCertificateFactory(configuration, mockServerLogger);
         }
     }
 
